# ahs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  apps.json
calendar/: CMakeLists.txt
calendar/qml/: main.qml
calendar/src/: main.cpp
compositor/: ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  main.cpp  pure-qml.qrc  test_apps.json
compositor/ahs-compositor-plugin/: ApplicationEntry.cpp  ApplicationEntry.h  ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  Controller.cpp  Controller.h  Notification.cpp  Notification.h
compositor/qml/: HomeScreen.qml  Notifications.qml  Screen.qml  SurfaceItem.qml  TopPanel.qml  main.qml
compositor/qml/background/: BackgroundSwirls.qml
